--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3,7 +3,7 @@ body{
 	margin:0;
 	
 }
-header{
+p.notice{
 	padding: 10px 10px 15px 10px;
   font-weight: italic; 
   font-size: 15pt;
@@ -17,6 +17,7 @@ header{
 
 }
 img{
+  content: url(images/wykrzyknik2.png);
 	vertical-align: center;
 	float:left;
 	height: 3%;
@@ -53,11 +54,20 @@ td {
   border: 0;
 
 }*/
-h1,h2,h3{
+h1,h2,h3,p{
 	text-align:center;
   font-family:Marker Felt;
 }
-th{
+h3{
+  text-decoration:underline;
+  background: linear-gradient(#6D7B8D, #98AFC7);
+}
+p{
+  text-align: center;
+  padding-left: 100px;
+  padding-right:100px;
+}
+h2{
   background-color:#e8eae9;
   background: linear-gradient(#687587, #404853);
   border-left: 1px solid rgba(0, 0, 0, 0.2);
@@ -73,36 +83,33 @@ h1{
 	text-shadow: 5px 5px 0px  rgba(0, 0, 0, 0.3);
 	font-size:80px;
 	font-family:Rebecca;
-}
-
-tr#name{
-  margin:0 0 0 0; 
+   margin:0 0 0 0; 
   background: linear-gradient(#5E767E, #95B9C7);
   border: 1px solid rgba(0, 0, 0, 0.2);
-  
+  width: 100%;
+  height: 200px;
+  padding-top:40px;
 
-  
-
+ 
 }
-li {
+
+
+
+ul {
     
     list-style: circle;
     padding-left: 15px;
-    text-indent: 2px;
-
+    text-align:center;
 
     }
-tr.tlista{
-  background-color: white;
-  text-align: center;
-  font-size:30px;
-}
-td.heading{
-  font-size:25px;
-  text-decoration: underline;
-}
-td.desc{
-  padding-left:30px;
+dt{
+  font-weight: bold;
+  font-family:Marker Felt;
 }
 
+dl{
+  text-align: left;
+  font-family:Marker Felt;
+  padding-left:40%;
+}
 
